--- a/pom.xml
+++ b/pom.xml
@@ -26,9 +26,52 @@
 		<java.version>17</java.version>
 		<!-- https://github.com/spring-cloud/spring-cloud-release/wiki/Supported-Versions-->
 		<spring-cloud.version>2023.0.2</spring-cloud.version>
-	</properties>
+		<jaeger.version>1.0.3</jaeger.version>
+        <jaeger-cloud.version>3.3.1</jaeger-cloud.version>
 
+	</properties>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+           <dependency>
+            <groupId>com.archetype.architectural</groupId>
+            <artifactId>common-vo</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <!-- Dependencia de jaeger web spring 2.7.x-->
+         <dependency>
+             <groupId>io.opentracing.contrib</groupId>
+             <artifactId>opentracing-spring-jaeger-web-starter</artifactId>
+             <version>${jaeger.version}</version>
+         </dependency>
+        <!-- Dependencia de jaeger cloud spring 2.7.x -->
+         <dependency>
+             <groupId>io.opentracing.contrib</groupId>
+             <artifactId>opentracing-spring-jaeger-cloud-starter</artifactId>
+             <version>${jaeger-cloud.version}</version>
+         </dependency>
+        </dependencies>
+    </dependencyManagement>
+        <!-- Dependencia de jaeger cloud spring 3.0.x -->
 	<dependencies>
+      <dependency>
+         <groupId>io.micrometer</groupId>
+         <artifactId>micrometer-tracing-bridge-otel</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>io.opentelemetry</groupId>
+         <artifactId>opentelemetry-exporter-otlp</artifactId>
+      </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>      
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-webflux</artifactId>
@@ -71,6 +114,7 @@
 			<artifactId>spring-kafka-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+	
 		<!--
            <dependency>
           <groupId>org.springdoc</groupId>
@@ -85,22 +129,7 @@
        -->    		
 	</dependencies>
 
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>org.springframework.cloud</groupId>
-				<artifactId>spring-cloud-dependencies</artifactId>
-				<version>${spring-cloud.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-		   <dependency>
-            <groupId>com.vinsguru</groupId>
-            <artifactId>common-dto</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-		</dependencies>
-	</dependencyManagement>
+	
 
 	<build>
 		<plugins>
@@ -108,6 +137,31 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			
+			                <!-- Build Docker image 
+                <plugin>
+                    <groupId>com.spotify</groupId>
+                    <artifactId>dockerfile-maven-plugin</artifactId>
+                    <version>1.4.13</version>
+                    <executions>
+                        <execution>                        
+                            <id>build-docker-image</id>
+                            <phase>package</phase>
+                            <goals>                                              
+                                <goal>build</goal>
+                 
+                                <goal>push</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <repository>${project.artifactId}</repository>
+                        <tag>${project.version}</tag>
+                          <buildArgs>
+                                 <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
+                        </buildArgs>
+                    </configuration>
+                </plugin>-->
 		</plugins>
 	</build>
 
