--- a/command-payment-service/pom.xml
+++ b/command-payment-service/pom.xml
@@ -15,8 +15,12 @@
         <dependency>
 			<groupId>com.archetype.architectural</groupId>
             <artifactId>common-vo</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
         </dependency>
-
+        <!-- Dependencia de jaeger web spring 2.7.x  
+        <dependency>
+             <groupId>io.opentracing.contrib</groupId>
+             <artifactId>opentracing-spring-jaeger-web-starter</artifactId>
+         </dependency>
+         -->
     </dependencies>
 </project>
