--- a/prototype-orchestrator/pom.xml
+++ b/prototype-orchestrator/pom.xml
@@ -15,8 +15,13 @@
         <dependency>
 			<groupId>com.archetype.architectural</groupId>
             <artifactId>common-vo</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
         </dependency>
+    <!-- Dependencia de jaeger cloud spring 2.7.x     
+         <dependency>
+             <groupId>io.opentracing.contrib</groupId>
+             <artifactId>opentracing-spring-jaeger-cloud-starter</artifactId>
+         </dependency>          
+         -->              
     </dependencies>
 
 </project>
