--- a/command-payment-service/src/main/resources/application.yml
+++ b/command-payment-service/src/main/resources/application.yml
@@ -11,9 +11,17 @@ management:
  tracing:
     sampling:
       probability: 1.0
+ #zipkin:
+  #  tracing:
+   #   endpoint: http://localhost:4317
  otlp:
    tracing:
+    #endpoint: http://localhost:4317
     endpoint: http://localhost:4318/v1/traces
+   #metrics:
+    #export:
+     #   url: http://localhost:4317
+    
 logging:
   pattern:
     level: '%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]'          
