--- a/docker-compose-collector.yaml
+++ b/docker-compose-collector.yaml
@@ -72,17 +72,17 @@ services:
 #jaeger service
 ##########################################################################
   jaeger:
-    container_name: jaeger
+    #container_name: jaeger-service
     image: "jaegertracing/all-in-one:latest" ##1.125
     ports:
         - "16686:16686"
         - "14268:14268"
         - "14250:14250"
-        - "4318:4318" 
-    environment:
-        - COLLECTOR_OTLP_ENABLED=true
+        #- "4318:4318" 
+    #environment:
+        #- COLLECTOR_OTLP_ENABLED=true
   otel-collector:
-    container_name: otel-collector
+    #container_name: collector-jaeger-service
     image: otel/opentelemetry-collector:latest
     command: [ "--config=/etc/otel-collector-config.yaml" ]
     volumes:
@@ -90,9 +90,9 @@ services:
     ports:
         - "13133:13133" 
         - "4317:4317"   
-        #- "4318:4318"   
+        - "4318:4318"   
     depends_on:
-        - jaeger         
+             - jaeger         
 volumes:
   postgres_data:
      driver: local
