--- a/docker-compose-jaeger.yaml
+++ b/docker-compose-jaeger.yaml
@@ -72,27 +72,20 @@ services:
 #jaeger service
 ##########################################################################
   jaeger:
-    container_name: jaeger
+    container_name: jaeger-service
     image: "jaegertracing/all-in-one:latest" ##1.125
     ports:
+        - "5775:5775/udp"
+        - "6831:6831/udp"
+        - "6832:6832/udp"
+        - "5778:5778"
         - "16686:16686"
+        - "4318:4318"
         - "14268:14268"
-        - "14250:14250"
-        - "4318:4318" 
+        - "9411:9411"
     environment:
         - COLLECTOR_OTLP_ENABLED=true
-  otel-collector:
-    container_name: otel-collector
-    image: otel/opentelemetry-collector:latest
-    command: [ "--config=/etc/otel-collector-config.yaml" ]
-    volumes:
-        - ./otel-collector-config.yaml:/etc/otel-collector-config.yaml:Z
-    ports:
-        - "13133:13133" 
-        - "4317:4317"   
-        #- "4318:4318"   
-    depends_on:
-        - jaeger         
+         
 volumes:
   postgres_data:
      driver: local
