--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
     </dependencyManagement>
         <!-- Dependencia de jaeger cloud spring 3.0.x -->
 	<dependencies>
-      <dependency>
+       <dependency>
          <groupId>io.micrometer</groupId>
          <artifactId>micrometer-tracing-bridge-otel</artifactId>
       </dependency>
@@ -68,10 +68,45 @@
          <groupId>io.opentelemetry</groupId>
          <artifactId>opentelemetry-exporter-otlp</artifactId>
       </dependency>
+      
+      
+      
+      
+    <!--    Java agente opentelemetry 2-->
+        <dependency>
+           <groupId>io.opentelemetry.javaagent</groupId>
+           <artifactId>opentelemetry-javaagent</artifactId>
+           <version>2.8.0</version>
+           <!--  <version>1.22.1</version>-->
+           <scope>runtime</scope>
+        </dependency> 
+           
+      <dependency>
+        <groupId>io.opentelemetry</groupId>
+        <artifactId>opentelemetry-bom</artifactId>
+        <version>1.43.0</version>
+        <type>pom</type>
+
+      </dependency>
+
+            <dependency>
+              <groupId>io.opentelemetry</groupId>
+              <artifactId>opentelemetry-api</artifactId>
+            </dependency>
+            
+<!-- Java agente opentelemetry-->      
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>      
+        </dependency>
+        
+        <dependency>
+           <groupId>io.opentelemetry.javaagent</groupId>
+           <artifactId>opentelemetry-javaagent</artifactId>
+           <version>1.22.1</version>
+           <scope>runtime</scope>
+        </dependency>
+              
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-webflux</artifactId>
