--- a/prototype-orchestrator/src/main/resources/application.yaml
+++ b/prototype-orchestrator/src/main/resources/application.yaml
@@ -3,7 +3,10 @@ server:
 ###
 spring:
   application:
-    name: prototype-orchestrator 
+    name: prototype-orchestrator
+  kafka:
+    template:
+      observation-enabled: true  
   cloud:
     function:
       #definition: supplier;consumer
@@ -20,22 +23,30 @@ spring:
         binder:
           replication-factor: 1
           brokers: ${KAFKA_HOST:localhost}:9092
+          enable-observation: true
 ######
 service:
   endpoints:
     inventory: http://localhost:8081
     payment: http://localhost:8082
 
-tracing:
-  url: http://localhost:4318/v1/traces
+#tracing:
+  #url: http://localhost:4318/v1/traces
 
 management:
   tracing:
     sampling:
       probability: 1.0
+  #zipkin:
+    #tracing:
+      #endpoint: http://localhost:4317
   otlp:
     tracing:
+      #endpoint: http://localhost:4317
       endpoint: http://localhost:4318/v1/traces
+    #metrics:
+     # export:
+      #  url: http://localhost:4317
 logging:
     pattern:
       level: '%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]'      
