--- a/command-inventory-service/src/main/resources/application.yml
+++ b/command-inventory-service/src/main/resources/application.yml
@@ -3,8 +3,8 @@ spring:
     name: command-inventory-service
 server:
     port: 8081
-tracing:
-    url: http://localhost:4318/v1/traces
+#tracing:
+ #   url: http://localhost:4318/v1/traces
 
 management:
   tracing:
