--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -74,25 +74,75 @@ services:
   jaeger:
     container_name: jaeger
     image: "jaegertracing/all-in-one:latest" ##1.125
+    restart: always
     ports:
         - "16686:16686"
         - "14268:14268"
         - "14250:14250"
         - "4318:4318" 
+        - "4317:4317" 
     environment:
         - COLLECTOR_OTLP_ENABLED=true
   otel-collector:
     container_name: otel-collector
     image: otel/opentelemetry-collector:latest
-    command: [ "--config=/etc/otel-collector-config.yaml" ]
+    restart: always
+    command: [ "--config=/etc/otelcol-contrib/otel-collector-config.yaml" ]
     volumes:
-        - ./otel-collector-config.yaml:/etc/otel-collector-config.yaml:Z
+        #- ./otel-collector-config.yaml:/etc/otel-collector-config.yaml:Z
+        - ./docker/collector/otel-collector-config.yaml:/etc/otelcol-contrib/otel-collector-config.yaml:Z
     ports:
-        - "13133:13133" 
-        - "4317:4317"   
-        #- "4318:4318"   
+        #- "13133:13133" 
+        #- "4317:4317" #OTLP gRPC receiver  
+        #- "4318:4318"#OTLP http receiver
+        - "1888:1888" # pprof extension
+        - "8888:8888" # Prometheus metrics exposed by the Collector
+        - "8889:8889" # Prometheus exporter metrics
+        - "13133:13133" # health_check extension
+        - "4317" # OTLP gRPC receiver
+        - "4318" # OTLP http receiver
+        - "55679:55679" # zpages extension              
     depends_on:
-        - jaeger         
+        - jaeger
+        - zipkin-all-in-one
+        - prometheus
+##########################################################################     
+#zipkin service
+##########################################################################
+  zipkin-all-in-one:
+      container_name: zipkin
+      image: openzipkin/zipkin:latest
+      restart: always
+      ports:
+        - "9411:9411"
+##########################################################################
+#prometheus service
+##########################################################################        
+  prometheus:
+      container_name: prometheus
+      image: prom/prometheus
+      volumes:
+         - ./docker/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+      command:
+         - --config.file=/etc/prometheus/prometheus.yml
+      restart: always
+      ports:
+         - '9090:9090'
+
+
+  grafana:
+      container_name: grafana
+      image: grafana/grafana
+      volumes:
+        - ./docker/grafana/grafana-datasources.yml:/etc/grafana/provisioning/datasources/datasources.yml
+      restart: always
+      ports:
+        - "3000:3000"
+      depends_on:
+        - prometheus
+        - jaeger
+        - zipkin-all-in-one
+                           
 volumes:
   postgres_data:
      driver: local
