--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,11 @@
          <groupId>io.opentelemetry</groupId>
          <artifactId>opentelemetry-exporter-otlp</artifactId>
       </dependency>
-      
+     <dependency>
+         <groupId>io.micrometer</groupId>
+         <artifactId>micrometer-registry-otlp</artifactId>
+       
+      </dependency>  
       
       
       
@@ -94,7 +98,13 @@
               <artifactId>opentelemetry-api</artifactId>
             </dependency>
             
-<!-- Java agente opentelemetry-->      
+<!-- Java agente opentelemetry--> 
+
+        <!-- prometheus  posible cambio a registry-otlp  -->
+        <dependency>
+             <groupId>io.micrometer</groupId>
+             <artifactId>micrometer-registry-prometheus</artifactId>
+        </dependency>        
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
