--- a/prototypebff-service/src/main/resources/application.yaml
+++ b/prototypebff-service/src/main/resources/application.yaml
@@ -55,6 +55,7 @@ spring:
      #path: /h2-console
      #port: 8089
 springdoc:
+  show-actuator: true
   swagger-ui:
     path: /swagger-ui # swagger custom path
     enabled: true  # Disabling the swagger-ui production enviroments always false
@@ -70,16 +71,31 @@ management:
   tracing:
     sampling:
       probability: 1.0
-  #zipkin:
-    #tracing:
-      #endpoint: http://localhost:4317    
+  endpoints:
+    web:
+      #base-path: /ocp-nsp-sorteo
+      exposure:
+       #include: '*'
+       include: health, metrics, prometheus
+  endpoint:
+    health:
+      show-details: ALWAYS
+  metrics:
+    tags:
+      application: ${spring.application.name}      
+  zipkin:
+    tracing:
+      #endpoint: http://localhost:4317 
+      endpoint: http://zipkin:9411/api/v2/spans   
   otlp:
     tracing:
       #endpoint: http://localhost:4317
       endpoint: http://localhost:4318/v1/traces
-    #metrics:
-      #export:
+    metrics:
+      export:
         #url: http://localhost:4317 
+        url: http://localhost:4318/v1/metrics
+        step: 10s
 logging:
   pattern:
     level: '%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]'      
