--- a/prototype-orchestrator/src/main/resources/application.yaml
+++ b/prototype-orchestrator/src/main/resources/application.yaml
@@ -43,10 +43,10 @@ management:
   otlp:
     tracing:
       #endpoint: http://localhost:4317
-      endpoint: http://localhost:4318/v1/traces
-    #metrics:
-     # export:
-      #  url: http://localhost:4317
+      endpoint: http://localhost:4318
+    metrics:
+      export:
+        url: http://localhost:4318
 logging:
     pattern:
       level: '%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]'      
