--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,8 @@ services:
       - '2181:2181'
     environment:
       - ALLOW_ANONYMOUS_LOGIN=yes
+    networks:
+      - saga-net
   kafka:
     image: 'bitnami/kafka:latest'
     ports:
@@ -23,6 +25,8 @@ services:
       - ALLOW_PLAINTEXT_LISTENER=yes
     depends_on:
       - zookeeper
+    networks:
+      - saga-net
 ##########################################################################     
 #kafdrop service
 ##########################################################################           
@@ -35,6 +39,9 @@ services:
     depends_on:
       - kafka
       - zookeeper
+    networks:
+      - saga-net
+      
 ##########################################################################
   postgres_db:
     container_name: postgresdb
@@ -55,6 +62,8 @@ services:
         POSTGRES_PASSWORD: postgrespw
         #main database if name is not specific thname of super user is use
         POSTGRES_DB: re2dbc_db
+    networks:
+        - saga-net
 
 ##########################################################################     
 #dbeaver service
@@ -67,6 +76,8 @@ services:
       - 8978:8978
     depends_on:
       - postgres_db
+    networks:
+      - saga-net
       
 ##########################################################################     
 #jaeger service
@@ -79,13 +90,18 @@ services:
         - "16686:16686"
         - "14268:14268"
         - "14250:14250"
-        - "4318:4318" 
-        - "4317:4317" 
+        #- "4318:4318" 
+        #- "4317:4317" 
+        #- "4318" 
+        #- "4317" 
     environment:
         - COLLECTOR_OTLP_ENABLED=true
+    networks:
+        - saga-net
   otel-collector:
     container_name: otel-collector
     image: otel/opentelemetry-collector:latest
+    #image: otel/opentelemetry-collector-contrib:0.2.10 #0.109.0
     restart: always
     command: [ "--config=/etc/otelcol-contrib/otel-collector-config.yaml" ]
     volumes:
@@ -93,19 +109,21 @@ services:
         - ./docker/collector/otel-collector-config.yaml:/etc/otelcol-contrib/otel-collector-config.yaml:Z
     ports:
         #- "13133:13133" 
-        #- "4317:4317" #OTLP gRPC receiver  
-        #- "4318:4318"#OTLP http receiver
+        - "4317:4317" #OTLP gRPC receiver  
+        - "4318:4318" #OTLP http receiver
         - "1888:1888" # pprof extension
         - "8888:8888" # Prometheus metrics exposed by the Collector
         - "8889:8889" # Prometheus exporter metrics
         - "13133:13133" # health_check extension
-        - "4317" # OTLP gRPC receiver
-        - "4318" # OTLP http receiver
+        #- "4317" # OTLP gRPC receiver
+        #- "4318" # OTLP http receiver
         - "55679:55679" # zpages extension              
     depends_on:
         - jaeger
         - zipkin-all-in-one
         - prometheus
+    networks:
+        - saga-net
 ##########################################################################     
 #zipkin service
 ##########################################################################
@@ -115,6 +133,8 @@ services:
       restart: always
       ports:
         - "9411:9411"
+      networks:
+        - saga-net
 ##########################################################################
 #prometheus service
 ##########################################################################        
@@ -125,9 +145,14 @@ services:
          - ./docker/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
       command:
          - --config.file=/etc/prometheus/prometheus.yml
+         #Necesarias para configuracion con ottel
+         - --enable-feature=exemplar-storage
+         - --web.enable-remote-write-receiver
       restart: always
       ports:
          - '9090:9090'
+      networks:
+         - saga-net
 
 
   grafana:
@@ -142,8 +167,13 @@ services:
         - prometheus
         - jaeger
         - zipkin-all-in-one
-                           
+      networks:
+            - saga-net                           
 volumes:
   postgres_data:
      driver: local
+networks:
+  saga-net:
+     name: saga-net
+     driver: bridge
         
