--- a/docker/collector/otel-collector-config.yaml
+++ b/docker/collector/otel-collector-config.yaml
@@ -2,13 +2,14 @@ receivers:
   otlp:
     protocols:
       grpc:
-        endpoint: otel-collector:4317
+        endpoint: 0.0.0.0:4317
       http:
-        endpoint: otel-collector:4318
+       # endpoint: otel-collector:4318
+        endpoint: 0.0.0.0:4318
 exporters:
   otlp:
-    #endpoint: "jaeger:14250"
-    endpoint: "jaeger:4318"
+    endpoint: "jaeger:14250"
+    #endpoint: "jaeger:4318"
     tls:
       insecure: true
   prometheus:
@@ -16,6 +17,11 @@ exporters:
     #enable_open_metrics: true
     const_labels:
         label1: value1
+  zipkin:
+    endpoint: http://zipkin:9411/api/v2/spans
+    format: proto
+  debug:
+    verbosity: detailed        
 processors:
   batch:
 
@@ -30,12 +36,12 @@ service:
     traces:
       receivers: [otlp]
       processors: [batch]
-      exporters: [otlp]
+      exporters: [otlp,zipkin,debug]
     logs:
       receivers: [otlp]
       processors: [batch]
-      exporters: [otlp]
+      exporters: [otlp,debug]
     metrics:
       receivers: [otlp]
       processors: [batch]
-      exporters: [otlp,prometheus]
+      exporters: [otlp,prometheus,debug]
