--- a/pom.xml
+++ b/pom.xml
@@ -40,26 +40,54 @@
                 <scope>import</scope>
             </dependency>
            <dependency>
-            <groupId>com.archetype.architectural</groupId>
-            <artifactId>common-vo</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-        <!-- Dependencia de jaeger web spring 2.7.x-->
+                <groupId>com.archetype.architectural</groupId>
+                <artifactId>common-vo</artifactId>
+                <version>0.0.1-SNAPSHOT</version>
+            </dependency>
+        <!-- Dependencia de jaeger web spring 2.7.x-,van fuera 
          <dependency>
              <groupId>io.opentracing.contrib</groupId>
              <artifactId>opentracing-spring-jaeger-web-starter</artifactId>
              <version>${jaeger.version}</version>
-         </dependency>
-        <!-- Dependencia de jaeger cloud spring 2.7.x -->
+         </dependency>-->
+        <!-- Dependencia de jaeger cloud spring 2.7.x ,van fuera
          <dependency>
              <groupId>io.opentracing.contrib</groupId>
              <artifactId>opentracing-spring-jaeger-cloud-starter</artifactId>
              <version>${jaeger-cloud.version}</version>
-         </dependency>
+         </dependency> -->
+         
+         <!-- Java agente opentelemetry springboot-->  
+         
+             <dependency>
+                <groupId>io.opentelemetry.instrumentation</groupId>
+                <artifactId>opentelemetry-instrumentation-bom</artifactId>
+                <version>2.8.0</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+             <!-- Java agente opentelemetry springboot--> 
         </dependencies>
     </dependencyManagement>
-        <!-- Dependencia de jaeger cloud spring 3.0.x -->
+    
+       
 	<dependencies>
+    <!-- Dependencia de zipkin spring 3.0.x 
+       <dependency>
+           <groupId>io.micrometer</groupId>
+           <artifactId>micrometer-tracing-bridge-brave</artifactId>
+       </dependency>
+       
+              <dependency>
+                 <groupId>io.zipkin.reporter2</groupId>
+                 <artifactId>zipkin-reporter-brave</artifactId>
+              </dependency>	 -->
+       <!--        
+       <dependency>
+         <groupId>io.opentelemetry</groupId>
+         <artifactId>opentelemetry-exporter-zipkin</artifactId>
+       </dependency>-->
+	 <!-- Dependencia de jaeger cloud OpenTelemetry With OTLP spring 3.0.x 
        <dependency>
          <groupId>io.micrometer</groupId>
          <artifactId>micrometer-tracing-bridge-otel</artifactId>
@@ -67,24 +95,32 @@
       <dependency>
          <groupId>io.opentelemetry</groupId>
          <artifactId>opentelemetry-exporter-otlp</artifactId>
-      </dependency>
+      </dependency>-->
+    <!--sol hace falta para otell  sino no llega   
      <dependency>
          <groupId>io.micrometer</groupId>
          <artifactId>micrometer-registry-otlp</artifactId>
-       
+         <scope>runtime</scope>
       </dependency>  
+     --> 
+      <!-- Java agente opentelemetry springboot--> 
+        <dependency>
+          <groupId>io.opentelemetry.instrumentation</groupId>
+          <artifactId>opentelemetry-spring-boot-starter</artifactId>
+        </dependency>
+        <!-- por defecto runtime los queemos en compli para codigojava filtros-->
+   
+      <!-- Java agente opentelemetry springboot--> 
       
-      
-      
-    <!--    Java agente opentelemetry 2-->
+    <!--    Java agente opentelemetry 2 
         <dependency>
            <groupId>io.opentelemetry.javaagent</groupId>
            <artifactId>opentelemetry-javaagent</artifactId>
-           <version>2.8.0</version>
-           <!--  <version>1.22.1</version>-->
+           <version>2.10.0</version> 
+          <!-  <version>1.22.1</version> ->
            <scope>runtime</scope>
-        </dependency> 
-           
+        </dependency> --> 
+           <!--
       <dependency>
         <groupId>io.opentelemetry</groupId>
         <artifactId>opentelemetry-bom</artifactId>
@@ -92,14 +128,21 @@
         <type>pom</type>
 
       </dependency>
-
+        -->
+        <!-- fundamental para el bean GlobalOpenTelemetry.get()
             <dependency>
               <groupId>io.opentelemetry</groupId>
               <artifactId>opentelemetry-api</artifactId>
+            </dependency>-->
+           <dependency>
+                <groupId>io.opentelemetry.contrib</groupId>
+                <artifactId>opentelemetry-samplers</artifactId>
+                <version>1.40.0-alpha</version>
             </dependency>
-            
-<!-- Java agente opentelemetry--> 
 
+        <!-- Java agente opentelemetry--> 
+        
+       
         <!-- prometheus  posible cambio a registry-otlp  -->
         <dependency>
              <groupId>io.micrometer</groupId>
@@ -108,13 +151,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
-        
-        <dependency>
-           <groupId>io.opentelemetry.javaagent</groupId>
-           <artifactId>opentelemetry-javaagent</artifactId>
-           <version>1.22.1</version>
-           <scope>runtime</scope>
         </dependency>
               
 		<dependency>
