--- a/archetypes-parent/cqrs-ev-parent/pom.xml
+++ b/archetypes-parent/cqrs-ev-parent/pom.xml
@@ -25,11 +25,30 @@
 			<artifactId>cqrsev-core-lib</artifactId>
 			<version>${cqrsev-core-lib-version}</version>
 		</dependency>		 
-	
+        <!-- Java agente opentelemetry springboot-->  
+         
+             <dependency>
+                <groupId>io.opentelemetry.instrumentation</groupId>
+                <artifactId>opentelemetry-instrumentation-bom</artifactId>
+                <version>2.8.0</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+             <!-- Java agente opentelemetry springboot--> 	
 	</dependencies>
   </dependencyManagement>
   
 <dependencies>
+   <!-- Java agente opentelemetry springboot--> 
+        <dependency>
+          <groupId>io.opentelemetry.instrumentation</groupId>
+          <artifactId>opentelemetry-spring-boot-starter</artifactId>
+        </dependency>
+            <dependency>
+                <groupId>io.opentelemetry.contrib</groupId>
+                <artifactId>opentelemetry-samplers</artifactId>
+                <version>1.40.0-alpha</version>
+            </dependency>
 		<dependency>
 			<groupId>org.springframework.kafka</groupId>
 			<artifactId>spring-kafka</artifactId>
