--- a/cqrs-ev-archetype/cqrs-ev-archetype.cmd/pom.xml
+++ b/cqrs-ev-archetype/cqrs-ev-archetype.cmd/pom.xml
@@ -29,12 +29,19 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
 		</dependency>
-   <!-- memory database resources-->  
+		<!-- memory database mongo embeded resources-->  
+		<dependency>
+            <groupId>de.flapdoodle.embed</groupId>
+            <artifactId>de.flapdoodle.embed.mongo.spring30x</artifactId>
+            <version>4.11.0</version>
+            <scope>test</scope>
+        </dependency>
+   <!-- memory database resources
 	     <dependency>
 		      <groupId>com.h2database</groupId>
 		      <artifactId>h2</artifactId>
 		      <scope>runtime</scope>
-	    </dependency>		
+	    </dependency>	-->  	
 <!-- 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
