--- a/cqrs-ev-archetype/servers_clientsOracle.yml
+++ b/cqrs-ev-archetype/servers_clientsOracle.yml
@@ -83,11 +83,14 @@ services:
         - ME_CONFIG_MONGODB_AUTH_PASSWORD=adminpw
         - ME_CONFIG_BASICAUTH_USERNAME=expresslogin
         - ME_CONFIG_BASICAUTH_PASSWORD=expresspw
+        #- ME_CONFIG_MONGODB_URL= mongodb://admin:adminpw@mongodb:27017/
         #- ME_CONFIG_BASICAUTH_PASSWORD=${MONGOEXPRESS_PASSWORD}
     depends_on:
         - mongodb
     ports:
       - "8899:8081"
+    networks:
+      - cqrs-net
  ##########################################################################     
  #dbeaver service
  ##########################################################################       
