--- a/archetypes-parent/cqrs-ev-parent/pom.xml
+++ b/archetypes-parent/cqrs-ev-parent/pom.xml
@@ -39,7 +39,7 @@
   </dependencyManagement>
   
 <dependencies>
-   <!-- Java agente opentelemetry springboot--> 
+   <!-- Java agente opentelemetry springboot
         <dependency>
           <groupId>io.opentelemetry.instrumentation</groupId>
           <artifactId>opentelemetry-spring-boot-starter</artifactId>
@@ -48,7 +48,7 @@
                 <groupId>io.opentelemetry.contrib</groupId>
                 <artifactId>opentelemetry-samplers</artifactId>
                 <version>1.40.0-alpha</version>
-            </dependency>
+            </dependency>--> 
 		<dependency>
 			<groupId>org.springframework.kafka</groupId>
 			<artifactId>spring-kafka</artifactId>
