--- a/cqrs-ev-archetype/cqrs-ev-archetype.cmd/pom.xml
+++ b/cqrs-ev-archetype/cqrs-ev-archetype.cmd/pom.xml
@@ -29,13 +29,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
 		</dependency>
-		<!-- memory database mongo embeded resources-->  
+		<!-- memory database mongo embeded resources  
 		<dependency>
             <groupId>de.flapdoodle.embed</groupId>
             <artifactId>de.flapdoodle.embed.mongo.spring30x</artifactId>
             <version>4.11.0</version>
             <scope>test</scope>
-        </dependency>
+        </dependency>-->
    <!-- memory database resources
 	     <dependency>
 		      <groupId>com.h2database</groupId>
