--- a/cqrs-ev-archetype/cqrs-ev-archetype.query/src/main/resources/application-docker.yml
+++ b/cqrs-ev-archetype/cqrs-ev-archetype.query/src/main/resources/application-docker.yml
@@ -1,7 +1,7 @@
 spring:
   jpa:
      defer-datasource-initialization: true  
-     show-sql: true  
+     show-sql: false  
      hibernate:
         ddl-auto: update
         format_sql: true
