--- a/cqrs-ev-archetype/cqrs-ev-archetype.query/src/main/resources/application-dev.yml
+++ b/cqrs-ev-archetype/cqrs-ev-archetype.query/src/main/resources/application-dev.yml
@@ -56,5 +56,5 @@ spring:
               packages: '*'
     template:
       default-topic: "prototype_availability" 
-  
+      observation-enabled: true
    
