--- a/cqrs-ev-archetype/cqrs-ev-archetype.cmd/src/main/resources/application.yml
+++ b/cqrs-ev-archetype/cqrs-ev-archetype.cmd/src/main/resources/application.yml
@@ -25,3 +25,14 @@ management:
   metrics:
    tags:
     application: ${spring.application.name}
+  otlp:
+      tracing:
+          #endpoint: http://localhost:4317
+          #endpoint: http://localhost:4318/v1/traces
+          endpoint: http://localhost:4318
+      metrics:
+        export:
+            #url: http://localhost:4317 
+            #url: http://localhost:4318/v1/metrics
+            url: http://localhost:4318
+            step: 10s
