--- a/cqrs-ev-archetype/cqrs-ev-archetype.cmd/src/main/resources/application.yml
+++ b/cqrs-ev-archetype/cqrs-ev-archetype.cmd/src/main/resources/application.yml
@@ -6,7 +6,7 @@ server:
     context-path: /${spring.application.name}
 spring:
    application:
-    name: nsp-archetype-cqrs-ev-cmd
+    name: archetype-cqrs-ev-cmd
    profiles:
      active: dev
    config:
@@ -29,10 +29,10 @@ management:
       tracing:
           #endpoint: http://localhost:4317
           #endpoint: http://localhost:4318/v1/traces
-          endpoint: http://localhost:4318
-      metrics:
-        export:
+          endpoint: http://localhost:4326
+      #metrics:
+        #export:
             #url: http://localhost:4317 
             #url: http://localhost:4318/v1/metrics
-            url: http://localhost:4318
-            step: 10s
+            #url: http://localhost:4318
+            #step: 10s
