--- a/api-composite-archetype/pom.xml
+++ b/api-composite-archetype/pom.xml
@@ -13,8 +13,44 @@
 	<version>1.0.0-SNAPSHOT</version>
 	<name>${project.artifactId}</name>
 	<description>REST API with direct access to SQL DB archetype</description>
-
+  <dependencyManagement>
+    <dependencies>
+        <!-- Java agente opentelemetry springboot -->  
+         
+             <dependency>
+                <groupId>io.opentelemetry.instrumentation</groupId>
+                <artifactId>opentelemetry-instrumentation-bom</artifactId>
+                <version>2.8.0</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+             <!-- Java agente opentelemetry springboot-->               
+    </dependencies>
+  </dependencyManagement>
 	<dependencies>
+	  <!-- Java agente opentelemetry springboot --> 
+	  <dependency>
+          <groupId>io.opentelemetry.instrumentation</groupId>
+          <artifactId>opentelemetry-spring-boot-starter</artifactId>
+        </dependency>
+               <!-- prometheus  con ottel   -->    
+        <dependency>
+             <groupId>io.micrometer</groupId>
+             <artifactId>micrometer-registry-otlp</artifactId>
+        </dependency>  
+	  <dependency>
+         <groupId>io.opentelemetry.contrib</groupId>
+         <artifactId>opentelemetry-samplers</artifactId>
+         <version>1.40.0-alpha</version>
+      </dependency>
+      <!-- Java agente opentelemetry springboot --> 
+  
+            <!-- prometheus    -->     
+        <dependency>
+             <groupId>io.micrometer</groupId>
+             <artifactId>micrometer-registry-prometheus</artifactId>
+        </dependency>    
+       
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -24,18 +60,28 @@
 			<artifactId>ojdbc8</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		<dependency>
+		<!--<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
-		</dependency>
+		</dependency>-->  
 	    <!-- memory database resources-->  
 	     <dependency>
 		      <groupId>com.h2database</groupId>
 		      <artifactId>h2</artifactId>
 		      <scope>runtime</scope>
 	    </dependency>
-	 				
+	    
+	    <!-- security -->
+     	<dependency>
+              <groupId>org.springframework.boot</groupId>
+              <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+        </dependency>
+         <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+        </dependency>				
 	</dependencies>
 
 	<build>
