--- a/archetypes-parent/api-composite-parent/pom.xml
+++ b/archetypes-parent/api-composite-parent/pom.xml
@@ -19,7 +19,17 @@
 	 
   <dependencyManagement>
 	<dependencies>
-		
+		        <!-- Java agente opentelemetry springboot 
+         
+             <dependency>
+                <groupId>io.opentelemetry.instrumentation</groupId>
+                <artifactId>opentelemetry-instrumentation-bom</artifactId>
+                <version>2.8.0</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency> --> 
+            
+             <!-- Java agente opentelemetry springboot-->   
 		<dependency>
 		   <groupId>com.archetype.base.core</groupId>
 		   <artifactId>base-core-lib</artifactId>
@@ -29,13 +39,26 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 			<version>${spring-boot.version}</version>
-		</dependency>	
+		</dependency>
+			
 	</dependencies>
   </dependencyManagement>
 
 
 <dependencies>
-
+ <!-- Java agente opentelemetry springboot
+        <dependency>
+             <groupId>io.opentelemetry.instrumentation</groupId>
+             <artifactId>opentelemetry-spring-boot-starter</artifactId>
+        </dependency>
+        
+           <dependency>
+                <groupId>io.opentelemetry.contrib</groupId>
+                <artifactId>opentelemetry-samplers</artifactId>
+                <version>1.40.0-alpha</version>
+            </dependency>  --> 
+                   
+  <!-- Java agente opentelemetry springboot-->        
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
